@startuml Language-Class-Diagram

title BookingCare Language Service - Class Diagram

hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 50
skinparam classBackgroundColor White
skinparam classBorderColor Black
skinparam wrapWidth 220
skinparam maxMessageSize 220

' ========== PRESENTATION LAYER ==========
class LanguagesController {
    - _languageService: ILanguageService
    + GetLanguage(id): Task<IActionResult>
    + CreateLanguage(request): Task<IActionResult>
    + UpdateLanguage(id, request): Task<IActionResult>
    + DeleteLanguage(id): Task<IActionResult>
    + GetLanguages(query): Task<IActionResult>
    + ToggleLanguageStatus(id): Task<IActionResult>
}

' ========== SERVICE LAYER ==========
interface ILanguageService {
    + CreateLanguageAsync(request): Task<LanguageResponse>
    + GetLanguageByIdAsync(id): Task<LanguageResponse?>
    + UpdateLanguageAsync(request): Task<LanguageResponse>
    + DeleteLanguageAsync(id): Task<bool>
    + ToggleLanguageStatusAsync(id): Task<bool>
    + GetLanguagesAsync(query): Task<LanguageListResponse>
}

class LanguageService {
    - _repository: ILanguageRepository
    - _mapper: IMapper
    - _logger: ILogger
    + CreateLanguageAsync(request): Task<LanguageResponse>
    + GetLanguageByIdAsync(id): Task<LanguageResponse?>
    + UpdateLanguageAsync(request): Task<LanguageResponse>
    + DeleteLanguageAsync(id): Task<bool>
    + GetLanguagesAsync(query): Task<LanguageListResponse>
}

' ========== REPOSITORY LAYER ==========
interface ILanguageRepository {
    + GetLanguageByIdAsync(id): Task<LanguageEntity?>
    + CreateLanguageAsync(language): Task<LanguageEntity>
    + UpdateLanguageAsync(language): Task<LanguageEntity>
    + DeleteLanguageAsync(id): Task<bool>
    + GetLanguagesAsync(query): Task<(List<LanguageEntity>, int)>
}

class LanguageRepository {
    - _context: DoctorDbContext
    + GetLanguageByIdAsync(id): Task<LanguageEntity?>
    + CreateLanguageAsync(language): Task<LanguageEntity>
    + UpdateLanguageAsync(language): Task<LanguageEntity>
    + DeleteLanguageAsync(id): Task<bool>
}

' ========== DATA LAYER ==========
class DoctorDbContext {
    + Languages: DbSet<LanguageEntity>
}

' ========== ENTITIES ==========
class LanguageEntity {
    + Id: Guid
    + Name: string
    + Status: Status
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

' ========== DTOs ==========
class CreateLanguageRequest {
    + Name: string
    + Status: Status
}

class LanguageQueryRequest {
    + SearchTerm: string?
    + Status: string?
    + PageNumber: int
    + PageSize: int
}

class LanguageResponse {
    + Id: Guid
    + Name: string
    + Status: Status
}

class LanguageListResponse {
    + Languages: List<LanguageResponse>
    + TotalCount: int
    + PageNumber: int
    + PageSize: int
    + TotalPages: int
}

' ========== LAYOUT HINTS ==========
LanguagesController -[hidden]down- ILanguageService
ILanguageService -[hidden]down- ILanguageRepository
ILanguageRepository -[hidden]down- DoctorDbContext

' ========== RELATIONSHIPS ==========

' Controller Layer
LanguagesController *-- ILanguageService

' Service Layer
LanguageService ..|> ILanguageService
LanguageService *-- ILanguageRepository
LanguageService o-- IMapper

' Repository Layer
LanguageRepository ..|> ILanguageRepository
LanguageRepository *-- DoctorDbContext

' Service Uses DTOs
ILanguageService ..> CreateLanguageRequest
ILanguageService ..> LanguageQueryRequest
ILanguageService ..> LanguageResponse

' Repository Uses Entities
ILanguageRepository ..> LanguageEntity

@enduml